# gamemapstool

./: .gitignore  .metadata  DELIVERY.md  README.md  pubspec.yaml
.trae/rules/: common.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gamemapstool/: MainActivity.kt
docs/: image_search_solution.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: input_controller.dart
lib/native/: image_search.dart  image_search_worker.dart
lib/pages/: capture_page.dart  settings_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/native_lib/: CMakeLists.txt  image_search.cpp  image_search.h
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  overlay_window.cpp  overlay_window.h
